updated readme for update to maven_opts